2009-07-02 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-action-conditions-editor.c (on_cancel_clicked):
	New function to trigger dialog response.

	* src/nact/nact-action-conditions-editor.c
	(on_initial_load_dialog): Make labels and buttons the same size.

	* src/nact/nact-action-conditions-editor.c
	(on_all_widgets_showed): Call
	nact_iprofile_conditions_all_widgets_showed function.

	* src/nact/nact-imenu-item.c:
	* src/nact/nact-imenu-item.h (nact_imenu_item_size_labels,
	nact_imenu_item_size_buttons): New functions.

	* src/nact/nact-imenu-item.c (on_icon_changed):
	Forces the display of an empty frame where there is no icon.

	* nact/nact-iprofile-conditions.c (hide_legend_dialog):
	Fixes bug which recorded a (0,0) position when the dialog closed.

	* nact/nact-iprofile-conditions.c:
	* nact/nact-iprofile-conditions.h
	(nact_iprofile_conditions_size_labels,
	nact_iprofile_conditions_size_buttons): New functions.

	* src/nact/nautilus-actions-config.ui:
	Add tooltips to AddAction and EditAction buttons.
	Encapsulates the IconImage into a IconFrame.

2009-07-01 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c:
	* src/nact/base-application.h (recursive_search_for_child,
	search_for_child_widget, base_application_get_dialog):
	New functions.
	All properties are now prefixed with "base-application-".

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_dialog,
	do_get_dialog): New functions.
	PROP_WINDOW_TOPLEVEL_WIDGET is renamed as
	PROP_WINDOW_TOPLEVEL_DIALOG.
	do_get_toplevel_widget is renamed as do_get_toplevel_dialog.
	All properties are now prefixed with "base-window-".

	* src/nact/nact-main-window.c:
	* src/nact/nact-action-conditions-editor.c:
	* src/nact/nact-action-profiles-editor.c:
	* src/nact/nact-profile-conditions-editor.c:
	Updated accordingly.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h
	(nact_iactions_list_set_focus): New function.

	* src/nact/nact-iprefs.c: